--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "autoload": {
+        "psr-4": {
+            "NikolayS93\\FBModals\\": "include"
+        }
+    },
     "require": {
         "nikolays93/wp-admin-form": "dev-master",
         "nikolays93/wp-admin-page": "dev-master",
