--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "NikolayS93\\FBModals\\": "include"
+            "NikolayS93\\FBModals\\": "include\\class"
         }
     },
     "require": {
